--- a/task-03.html
+++ b/task-03.html
@@ -13,6 +13,21 @@
         color: #424242;
         line-height: 1.5;
       }
+
+      #gallery {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+      }
+
+      img {
+        display: block;
+        width: 620px;
+      }
+
+      .item {
+        list-style: none;
+      }
     </style>
   </head>
   <body>
